<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_background">

    <TextView
        android:id="@+id/loading_view_detail_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/loading_label"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/loading" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/launch_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/image_content_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_screen_mission_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/thumbnail"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_and_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/thumbnail"
                    app:layout_constraintTop_toBottomOf="@id/detail_screen_mission_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/mission_objective_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_box"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/mission_objective_label"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mission_objective_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_box"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rocket_details_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rocket_details_label"
                    android:lines="1"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/rocket_name_detail_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/ships"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/rocket_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_box"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/launch_details_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:padding="10dp"
                    android:text="@string/launch_details_label"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/launch_status_detail_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/launch_failure_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/launch_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/related_links_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_box"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/related_links_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:padding="10dp"
                    android:text="@string/related_links_label"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/video_link_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_content_description"
                        android:src="@drawable/video_icon" />

                    <TextView
                        android:id="@+id/video_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/article_link_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_content_description"
                        android:src="@drawable/article_icon" />

                    <TextView
                        android:id="@+id/article_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/press_kit_link_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_content_description"
                        android:src="@drawable/press_kit_icon" />

                    <TextView
                        android:id="@+id/press_kit_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
